--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,12 @@
 /* Add CSS Styling */
+
+.proportioned {
+    height: auto;
+    width: 300px;
+}
+
+
+.distorted {
+    height: 400px;
+    width: 200px;
+}
