--- a/foundations/06-cascade-fix/style copy.css
+++ b/foundations/06-cascade-fix/style copy.css
@@ -2,22 +2,20 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.para {
+.para,
+.small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
-  font-size: 22px;
 }
 
 .small-para {
   font-size: 14px;
+  font-weight: 800;
 }
 
-
-.button {
-  background-color: rgb(255, 255, 255);;
-  font-size: 20px;
+.para {
+  font-size: 22px;
 }
-
 
 .confirm {
   background: green;
@@ -25,15 +23,20 @@ body {
   font-weight: bold;
 } 
 
+.button {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+}
 
-.text {
+.child {
+  color: rgb(0, 0, 0);
+  font-weight: 800;
+  font-size: 14px;
+}
+
+div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
-}
-
-
-.child {
-  font-weight: 800;
-  font-size: 14px;
 }
